--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <meta name="viewport" content="user-scalable=yes">
 <title>cssnft</title>
-<link rel="stylesheet" href="/static/entry.DdofIv8F.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/static/DOKXjBdx.js">
+<link rel="stylesheet" href="/static/entry.BfoEXSZ8.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/static/jhaj4R0h.js">
 <meta name="format-detection" content="telephone=no">
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
-<script type="module" src="/static/DOKXjBdx.js" crossorigin></script>
+<script type="module" src="/static/jhaj4R0h.js" crossorigin></script>
 <script id="unhead:payload" type="application/json">{"title":"cssnft"}</script></head><body><div id="__nuxt"><!DOCTYPE html>
 <html lang="en">
 
@@ -172,5 +172,5 @@
 
 </body>
 
-</html></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1766382103878,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{api:{baseUrl:""},persistedState:{storage:"cookies",debug:false,cookieOptions:{}}},app:{baseURL:"/",buildId:"0b4752ce-f095-4bc1-bf2b-dfd03733553f",buildAssetsDir:"/static/",cdnURL:""}}</script></body></html>
+</html></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1766390491711,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{api:{baseUrl:""},persistedState:{storage:"cookies",debug:false,cookieOptions:{}}},app:{baseURL:"/",buildId:"035b6627-ef18-445b-80f6-ee074e68e4ca",buildAssetsDir:"/static/",cdnURL:""}}</script></body></html>
